Fixed nav on mobile

--- a/assets/css/_inc/common/components/_nav.sass
+++ b/assets/css/_inc/common/components/_nav.sass
@@ -52,10 +52,11 @@ header#top-nav
 	position: fixed
 	background: black
 	top: 0
-	left: -400px
+	left: -100%
 	height: 100%
 
-	width: 400px
+	max-width: 400px
+	width: 75%
 	padding: $triple-unit-layout
 	padding-top: rem(80px)
 
