--- a/assets/css/litchi.css
+++ b/assets/css/litchi.css
@@ -321,9 +321,10 @@ header#top-nav {
   position: fixed;
   background: black;
   top: 0;
-  left: -400px;
+  left: -100%;
   height: 100%;
-  width: 400px;
+  max-width: 400px;
+  width: 75%;
   padding: 3rem;
   padding-top: 5rem; }
   .nav-links .button {
